BUGFIX: RAIL-84 Viz tooltip text wrapping

--- a/src/components/visualizations/styles/tooltip.scss
+++ b/src/components/visualizations/styles/tooltip.scss
@@ -22,6 +22,11 @@
     .highcharts-tooltip {
         z-index: 3005;
         display: flex;
+        width: 320px;
+
+        @media #{$insight-small-only} {
+            width: auto;
+        }
 
         > span {
             flex: 0 0 auto;
@@ -73,17 +78,12 @@
 }
 
 .gd-viz-tooltip-content {
-    max-width: 320px;
     padding: 13px 13px 9px;
     border-radius: 3px;
     border: 1px solid transparentize($bubble-light-border-base, 0.3);
     box-shadow: 0 1px 3px 0 rgba(20, 56, 93, 0.1), 0 2px 9px 0 rgba(20, 56, 93, 0.15);
     line-height: 1.3;
     white-space: normal;
-
-    @media #{$insight-small-only} {
-        max-width: none;
-    }
 }
 
 .gd-viz-tooltip-tail {
@@ -133,25 +133,25 @@
     }
 }
 
-.gd-viz-tooltip-table-title {
+.gd-viz-tooltip-table-title,
+.gd-viz-tooltip-table-value {
     overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: top;
+}
+
+.gd-viz-tooltip-table-title {
     max-width: 140px;
+    padding-top: 1px;
     font-size: 12px;
     font-weight: normal;
     line-height: 14px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     text-align: right;
-    vertical-align: middle;
     color: $gd-color-label;
 }
 
 .gd-viz-tooltip-table-value {
-    overflow: hidden;
     max-width: 165px;
-    padding: 0 0 0 5px;
+    padding-left: 5px;
     font-size: 14px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    vertical-align: top;
 }
